add ejs head partial; update products ejs templates

--- a/views/products_index.ejs
+++ b/views/products_index.ejs
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('partials/_head') %>
-
 <body>
-  <h1>Products will be shown on this page</h1>
+  <h1>Products index</h1>
 </body>
 
 </html>
