add foundational header, update routes and CSS

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('partials/_head') %>
-
   <body>
-    <h1>404 - Not Found</h1>
+    <%- include('partials/_header'); %>
+    <main>
+      <h1>404 - Not Found</h1>
+    </main>
+
   </body>
 </html>
