--- a/views/products_new.ejs
+++ b/views/products_new.ejs
@@ -4,7 +4,7 @@
   <body>
   <%- include('partials/_header'); %>
   <main>
-    <h1>Products index</h1>
+    <h1>New Products listing form will be shown on this page</h1>
   </main>
 
 </body>
