--- a/views/products_show.ejs
+++ b/views/products_show.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('partials/_head') %>
-
-<body>
-  <h1>Products will be shown on this page</h1>
+  <body>
+  <%- include('partials/_header'); %>
+  <main>
+    <h1>Products will be shown on this page</h1>
+  </main>
 </body>
 
 </html>
