--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <%- include('partials/_head') %>
 <body>
+  <%- include('partials/_header'); %>
   <main style="margin: 1em">
     <h3>Create an account</h3>
     <br />
