--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -2,5 +2,10 @@
 
 body,
 html {
+  font-family: 'Source Sans Pro', sans-serif;
+  box-sizing: border-box;
   margin: 0;
+  background-color: #dde5ed;
 }
+
+@import './header.scss'
