--- a/views/products_index.ejs
+++ b/views/products_index.ejs
@@ -11,6 +11,21 @@
         <a class="title">iPhone 13 Pro</a>
         <a class="price">$499.99</a>
       </article>
+      <article class="featured-listing">
+        <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
+        <a class="title">iPhone 13 Pro</a>
+        <a class="price">$499.99</a>
+      </article>
+      <article class="featured-listing">
+        <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
+        <a class="title">iPhone 13 Pro</a>
+        <a class="price">$499.99</a>
+      </article>
+      <article class="featured-listing">
+        <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
+        <a class="title">iPhone 13 Pro</a>
+        <a class="price">$499.99</a>
+      </article>
     </section>
 
     <div class="sorting-buttons">
