add media query for listings under 720px

--- a/views/products_index.ejs
+++ b/views/products_index.ejs
@@ -36,10 +36,8 @@
       <img class="listing-img" src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
       <div class="listing-details">
         <a>iPhone 13 Pro</a>
-        <a>$799.99</a>
-        <div>
-          <p>Your new superpower. Our most advanced dual-camera system ever. Cinematic mode. Ultra Wide camera. 5G. Adaptive 120Hz display. A15 Bionic chip. Super Retina XDR display.</p>
-        </div>
+        <a class="price">$799.99</a>
+        <p>Your new superpower. Our most advanced dual-camera system ever. Cinematic mode. Ultra Wide camera. 5G. Adaptive 120Hz display. A15 Bionic chip. Super Retina XDR display.</p>
       </div>
     </article>
   </main>
