--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -1,83 +1,101 @@
-// Featured Section
-section.featured {
-  padding: 20px 20px 0px 20px;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  column-gap: 50px;
-  border: 2px solid black;
-  flex-wrap: wrap;
+main.all-listings {
 
-  article.featured-listing {
+  // Featured Section
+  section.featured {
+    padding: 20px 20px 0px 20px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+    justify-content: space-around;
+    column-gap: 50px;
     border: 2px solid black;
-    margin-bottom: 20px;
+    flex-wrap: wrap;
 
-    img {
-      max-width: 150px;
-    }
-
-    a {
-      padding: 0em 0.5em;
-      font-weight: bold;
-    }
-
-    a.price {
-      color: #41AC6C;
-    }
-  }
-}
-
-// Favourite and sort buttons
-div.sorting-buttons {
-  display:flex;
-  justify-content: right;
-  margin: 5px 0em;
-
-  button {
-    height: 2em;
-    margin-left: 1em;
-    font-size: 0.75em;
-    background-color: transparent;
-  }
-}
-
-// All listings
-article.listing{
-  padding: 20px;
-  border: 2px solid black;
-  height: 300px;
-  width: vw;
-  display: flex;
-  justify-content: space-between;
-
-  img.listing-img {
-    max-height: 100%;
-    max-width: 100%;
-
-  }
-  div.listing-details {
-    display: flex;
-    text-align: right;
-    flex-direction: column;
-    padding-left: 20px;
-
-    a {
-      font-weight: bold;
-    }
-
-    div {
-      width: 100%;
+    article.featured-listing {
       display: flex;
-      justify-content: right;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      border: 2px solid black;
+      margin-bottom: 20px;
 
-      p {
-        margin-top: 10px;
-        width: 100%;
-        text-align: left;
+      img {
+        max-width: 150px;
+      }
+
+      a {
+        padding: 0em 0.5em;
+      }
+    }
+  }
+
+  // Favourite and sort buttons
+  div.sorting-buttons {
+    display: flex;
+    justify-content: right;
+    margin: 5px 0em;
+
+    button {
+      height: 2em;
+      margin-left: 1em;
+      font-size: 0.75em;
+      background-color: transparent;
+    }
+  }
+
+  // All listings
+  article.listing {
+    padding: 20px;
+    border: 2px solid black;
+    height: auto;
+    width: vw;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+
+    img.listing-img {
+      max-height: 100%;
+      max-width: 100%;
+      align-self: center;
+
+    }
+
+    div.listing-details {
+      display: flex;
+      text-align: left;
+      flex-direction: column;
+      padding: 20px 0 0 0;
+
+
+        p {
+          margin-top: 10px;
+          width: 100%;
+          text-align: left;
+      }
+    }
+  }
+
+  a {
+    font-weight: bold;
+  }
+
+  .price {
+    color: #41AC6C !important;
+  }
+
+  @media (min-width: 720px) {
+
+    // All listings
+    article.listing {
+      flex-direction: row;
+      height: 300px;
+
+      img.listing-img {
+        max-height: 100%;
+        max-width: 100%;
+        align-self: left;
+      }
+      div.listing-details {
+        padding: 0 0 0 20px;
       }
     }
   }
