--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -39,6 +39,7 @@ main.all-listings {
       margin-left: 1em;
       font-size: 0.75em;
       background-color: transparent;
+      border-radius: 5px;
     }
   }
 
