add preliminary register POST, session-cookies

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,6 +8,13 @@
     <br />
     <form action="/register" method="POST">
       <div class="form-group">
+        <label for="name">Name:</label>
+        <input
+          class="form-control"
+          type="text"
+          name="name"
+          style="width: 300px"
+        />
         <label for="email">Email:</label>
         <input
           class="form-control"
