add logout POST, insert temporary logout button in header

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,6 +11,9 @@
       </div>
     </div>
         <div class="navbar-nav">
+          <form class="form-inline" action="/logout" method="POST">
+            <button type="submit" class="btn btn-outline-dark">Logout</button>
+          </form>
           <a class="nav-item nav-link" href="/login">Login</a>
           <a class="nav-item nav-link" href="/register">Register</a>
         </div>
