--- a/views/products_index.ejs
+++ b/views/products_index.ejs
@@ -6,42 +6,32 @@
   <main class="all-listings">
     <a><strong>Featured</strong></a>
     <section class="featured">
+    <% for(let product of products.filter((item) => item.isfeatured===true)) { %>
       <article class="featured-listing">
-        <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
-        <a class="title">iPhone 13 Pro</a>
-        <a class="price">$499.99</a>
+        <a href="#">
+        <img src="<%= `${product.img_url}` %>">
+        <div class="title"><%= product.title %></div>
+      </a>
+        <span class="price">$<%= product.price %></span>
       </article>
-      <article class="featured-listing">
-        <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
-        <a class="title">iPhone 13 Pro</a>
-        <a class="price">$499.99</a>
-      </article>
-      <article class="featured-listing">
-        <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
-        <a class="title">iPhone 13 Pro</a>
-        <a class="price">$499.99</a>
-      </article>
-      <article class="featured-listing">
-        <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
-        <a class="title">iPhone 13 Pro</a>
-        <a class="price">$499.99</a>
-      </article>
+      <% } %>
     </section>
-
     <div class="sorting-buttons">
       <button>Favourite</button>
       <button>Sort Price</button>
     </div>
-    <article class = "listing">
-      <img class="listing-img" src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-13-pro-blue-select?wid=300&hei=300', '900', 'Latest iPhone 13 Pro 256GB - Sierra Blue">
+    <% for(let product of products.filter((item) => item.isfeatured===false)) { %>
+    <article class="listing">
+      <a href="">
+      <img class="listing-img" src="<%= `${product.img_url}` %>">
+    </a>
       <div class="listing-details">
-        <a>iPhone 13 Pro</a>
-        <a class="price">$799.99</a>
-        <p>Your new superpower. Our most advanced dual-camera system ever. Cinematic mode. Ultra Wide camera. 5G. Adaptive 120Hz display. A15 Bionic chip. Super Retina XDR display.</p>
+        <a href="#"><%= product.title %></a>
+        <div class="price">$<%= product.price %></div>
+        <p><%= product.description %></p>
       </div>
     </article>
+    <% } %>
   </main>
-
 </body>
-
 </html>
