--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -1,6 +1,6 @@
 main.unique-listing-info {
   article.unique-listing-details {
-    padding-top: 20px;
+    padding-top: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,7 +29,7 @@ main.unique-listing-info {
     }
 
     p {
-      padding: 10px 0 20px;
+      padding: 10px 0 1em;
       max-width: 70ch;
     }
   }
