--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,12 +10,16 @@
         <a class="nav-item nav-link" href="/products/new">Create New Listing</a>
       </div>
     </div>
+    <% if (typeof user_id !== 'undefined') { %>
         <div class="navbar-nav">
           <form class="form-inline" action="/logout" method="POST">
-            <button type="submit" class="btn btn-outline-dark">Logout</button>
+            <span style="margin-right: 10px">Logged In As: <%= user_id.email %></span>
+            <button type="submit" class="btn btn-outline-light">Logout</button>
           </form>
+          <% } else { %>
           <a class="nav-item nav-link" href="/login">Login</a>
           <a class="nav-item nav-link" href="/register">Register</a>
         </div>
+        <% } %>
   </nav>
 </header>
