fix header layout and css

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,21 +7,21 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/products">Listings</a>
-        <% if (typeof user_id !== 'undefined' && user_id.admin) { %>
-        <a class="nav-item nav-link" href="/products/new">Create New Listing</a>
-        <% } %>
+        <% if (typeof user_id !=='undefined' && user_id.admin) { %>
+          <a class="nav-item nav-link" href="/products/new">Create New Listing</a>
+          <% } %>
       </div>
     </div>
-    <% if (typeof user_id !== 'undefined') { %>
-        <div class="navbar-nav">
-          <form class="form-inline" action="/logout" method="POST">
-            <span style="margin-right: 10px">Logged In As: <%= user_id.email %></span>
-            <button type="submit" class="btn btn-outline-light">Logout</button>
-          </form>
-          <% } else { %>
+    <div class="navbar-nav">
+      <% if (typeof user_id !=='undefined' ) { %>
+        <form class="form-inline" action="/logout" method="POST">
+          <span>Logged In As: <%= user_id.email %></span>
+          <button type="submit" class="btn btn-outline-light">Logout</button>
+        </form>
+        <% } else { %>
           <a class="nav-item nav-link" href="/login">Login</a>
           <a class="nav-item nav-link" href="/register">Register</a>
-        </div>
-        <% } %>
+          <% } %>
+    </div>
   </nav>
 </header>
