update products index html with attributes for jquery; add jquery script to head

--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -24,5 +24,6 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
 
   <!-- App JS -->
+  <script type="text/javascript" src="/scripts/products_index.js"></script>
 
 </head>
