--- a/views/products_index.ejs
+++ b/views/products_index.ejs
@@ -6,7 +6,7 @@
   <main class="all-listings">
     <a><strong>Featured</strong></a>
     <section class="featured">
-    <% for(let product of products.filter((item) => item.isfeatured===true)) { %>
+    <% for(let product of products.filter((item) => item.isfeatured===true && item.issold===false)) { %>
       <article class="featured-listing">
         <a href="products/<%=`${product.id}`%>">
         <img src="<%= `${product.img_url}` %>">
@@ -16,17 +16,19 @@
       </article>
       <% } %>
     </section>
-    <div class="sorting-buttons">
+  <div class="sorting-buttons">
     <div class="form-check form-switch">
-      <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-      <label class="form-check-label" for="flexSwitchCheckDefault">Show Only Favourites</label>
+      <input class="form-check-input" type="checkbox" id="favouritesOnly">
+      <label class="form-check-label" for="favouritesOnly">Show Only Favourites</label>
     </div>
-    <div class="form-check form-switch">
-      <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-      <label class="form-check-label" for="flexSwitchCheckDefault">Sort By Price</label>
-    </div>
+    <select id="sortBy" class="form-select" aria-label="Default select example">
+      <option value="recent" selected>Most recent</option>
+      <option value="priceLow">Price: low to high</option>
+      <option value="priceHigh">Price: high to low</option>
+    </select>
   </div>
-    <% for(let product of products.filter((item) => item.isfeatured===false)) { %>
+  <section id="regular-listings">
+    <% for(let product of products.filter((item) => item.isfeatured===false && item.issold===false )) { %>
     <article class="listing">
       <a href="products/<%=`${product.id}`%>">
       <img class="listing-img" src="<%= `${product.img_url}` %>">
@@ -38,6 +40,7 @@
       </div>
     </article>
     <% } %>
+  </section>
   </main>
 </body>
 </html>
