update layout for pages that have forms

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -11,4 +11,5 @@ html {
 
 @import './header.scss';
 @import './products_index.scss';
+@import './products_new.scss';
 @import './products_unique.scss';
