--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('partials/_head') %>
-<body>
-  <%- include('partials/_header'); %>
-  <main style="margin: 1em">
-    <h3>Login</h3>
-    <br />
-    <form action="/login" method="POST">
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input
-          class="form-control"
-          type="email"
-          name="email"
-          style="width: 300px"
-        />
-        <label for="password">Password:</label>
-        <input
-          class="form-control"
-          type="password"
-          name="password"
-          style="width: 300px; margin-bottom: 1em"
-        />
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </div>
-    </form>
-  </main>
-</body>
+<%- include('partials/_head') %>
+
+  <body>
+    <%- include('partials/_header'); %>
+      <main class="input-form">
+        <div>
+          <form action="/login" method="POST">
+            <div class="form-group">
+              <h3>Login</h3>
+              <label for="email">Email:</label>
+              <input class="form-control" type="email" name="email" />
+              <label for="password">Password:</label>
+              <input class="form-control" type="password" name="password" />
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
+      </main>
+
+  </body>
 
 </html>
