--- a/views/products_new.ejs
+++ b/views/products_new.ejs
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('partials/_head') %>
-  <body>
-  <%- include('partials/_header'); %>
-  <main>
-    <h1>New Products listing form will be shown on this page</h1>
-  </main>
+<%- include('partials/_head') %>
 
-</body>
+  <body>
+    <%- include('partials/_header'); %>
+      <main class="input-form">
+        <div>
+          <form action="/register" method="POST">
+            <div class="form-group">
+              <h3>Create an account</h3>
+              <label for="name">Name:</label>
+              <input class="form-control" type="text" name="name" />
+              <label for="email">Email:</label>
+              <input class="form-control" type="email" name="email" />
+              <label for="password">Password:</label>
+              <input class="form-control" type="password" name="password" />
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
+      </main>
+
+  </body>
 
 </html>
