implement favourites db query

--- a/views/products_index.ejs
+++ b/views/products_index.ejs
@@ -19,9 +19,9 @@
   <div class="sorting-buttons">
     <div class="form-check form-switch">
       <input class="form-check-input" type="checkbox" id="favouritesOnly">
-      <label class="form-check-label" for="favouritesOnly">Show Only Favourites</label>
+      <label class="form-check-label" for="favouritesOnly">Favourites</label>
     </div>
-    <select id="sortBy" class="form-select" aria-label="Default select example">
+    <select id="sortBy" class="form-select" aria-label="Sorting filter">
       <option value="recent" selected>Most recent</option>
       <option value="priceLow">Price: low to high</option>
       <option value="priceHigh">Price: high to low</option>
