--- a/styles/header.scss
+++ b/styles/header.scss
@@ -2,22 +2,26 @@ header {
   nav {
     background-color: #7994AF;
     width: 100%;
+    padding: 0 1em 0;
 
     .navbar-brand {
       font-size: 1.5rem;
       font-weight: bold;
-      color: #EBF1FE
+      color: #EBF1FE;
+      margin-right: 0.25em;
     }
 
-    a {
-      color: #EBF1FE ;
+    .nav-item {
+      color: #EBF1FE;
       &:hover {
-        color: white
+        color: white;
       }
     }
+
     div.navbar-nav {
       display: flex;
       align-items: center;
+      margin-left: 1em;
     }
 
     span {
@@ -28,7 +32,8 @@ header {
       display: flex;
       justify-content: flex-end;
       align-content: right;
-      text-align: right;
+      align-items: center;
+      text-align: left;
     }
 
     button {
