--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,7 +15,7 @@
     <div class="navbar-nav">
       <% if (typeof user_id !=='undefined' ) { %>
         <form class="form-inline" action="/logout" method="POST">
-          <span>Logged In As: <%= user_id.email %></span>
+          <span>Logged In As: <%= user_id.name %></span>
           <button type="submit" class="btn btn-outline-light">Logout</button>
         </form>
         <% } else { %>
