--- a/views/products_new.ejs
+++ b/views/products_new.ejs
@@ -8,7 +8,7 @@
         <div>
           <form action="/products_new" method="POST">
             <div class="form-group">
-              <h3>Create an new listing</h3>
+              <h3>Create a new listing</h3>
               <label for="title">Item Name:</label>
               <input class="form-control" type="text" name="title" />
               <label for="img_url">Image URL:</label>
