--- a/styles/products_new.scss
+++ b/styles/products_new.scss
@@ -24,6 +24,13 @@ main.input-form {
       button {
         margin-top: 1em;
       }
+
+      .check-box {
+        transform: scale(2);
+        margin-top: 1em;
+        margin-left: 0.5em;
+        margin-bottom: 0.5em;
+      }
     }
   }
 
