add jquery click listeners

--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -25,5 +25,6 @@
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/products_index.js"></script>
+  <script type="text/javascript" src="/scripts/products_unique.js"></script>
 
 </head>
