--- a/views/products_unique.ejs
+++ b/views/products_unique.ejs
@@ -14,8 +14,8 @@
     </div>
       <p><%= product.description %></p>
       <div class="unique-listing-buttons">
-        <button>Mark As Sold</button>
-        <button>Add As Favourite</button>
+        <button id="markSold">Mark As Sold</button>
+        <button id="addFavourite">Add As Favourite</button>
         <button>Contact Seller</button>
       </div>
     </article>
