--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -2,12 +2,11 @@ main.all-listings {
 
   // Featured Section
   section.featured {
-    padding: 1em 1em 0px 1em;
+    padding: 0em 1em 0px;
     width: 100%;
     display: flex;
     justify-content: space-around;
     column-gap: 1em;
-    border: 2px solid black;
     flex-wrap: wrap;
 
     article.featured-listing {
@@ -15,8 +14,8 @@ main.all-listings {
       flex-direction: column;
       align-items: center;
       text-align: center;
-      border: 2px solid black;
-      margin-bottom: 1em;
+      box-shadow: 2px 2px 5px 1px #7994AF;
+      padding: 1em 0em 1em;
 
       img {
         max-width: 150px;
@@ -47,7 +46,7 @@ main.all-listings {
   // All listings
   article.listing {
     padding: 1em;
-    border: 2px solid black;
+    box-shadow: 2px 2px 5px 1px #7994AF;
     height: auto;
     max-width: 75%;
     min-width: 300px;
