--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -1,15 +1,21 @@
 main.unique-listing-info {
   article.unique-listing-details {
-    padding-top: 1em;
+    padding: 2em 0 2em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 75%;
+    max-width: 600px;
+    margin: auto;
+    box-shadow: 2px 2px 5px 1px #7994AF;
+    font-size: 0.75em;
 
     div.unique-primary-info {
       width: 100%;
-      max-width: 500px;
+      max-width: 600px;
       display: flex;
       flex-direction: column;
+      padding: 0 2em 0;
 
       img {
         height: auto;
@@ -19,7 +25,7 @@ main.unique-listing-info {
         padding: 5px 0px;
         display: flex;
         justify-content: space-between;
-        border: 2px solid black;
+        background-color: rgba($color: #7994af, $alpha: 0.2);
       }
 
       a {
@@ -36,15 +42,23 @@ main.unique-listing-info {
 
   .unique-listing-buttons {
     width: 100%;
-    max-width: 500px;
+    max-width: 600px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     column-gap: 5px;
+    padding: 0 2em 0;
 
     button {
       background-color: rgba($color: #7994af, $alpha: 0.3);
       border-radius: 5px;
     }
   }
+
+  @media (min-width: 600px) {
+    article.unique-listing-details {
+      font-size: 1rem;
+    }
+  }
 }
+
