implement mark as sold button

--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -47,4 +47,16 @@ main.unique-listing-info {
       border-radius: 5px;
     }
   }
+  .user-msg {
+    font-size: 2em;
+    align-self: flex-start;
+    display: none;
+  }
+
+  .red {
+    color: red;
+  }
+  .green {
+    color: green;
+  }
 }
