--- a/views/products_unique.ejs
+++ b/views/products_unique.ejs
@@ -14,10 +14,11 @@
     </div>
       <p><%= product.description %></p>
       <div class="unique-listing-buttons">
-        <button id="markSold">Mark As Sold</button>
-        <button id="addFavourite">Add As Favourite</button>
+        <button id="markSold" value="<%= `${product.id}` %>">Mark As Sold</button>
+        <button id="addFavourite" value="<%= `${product.id}` %>">Add As Favourite</button>
         <button>Contact Seller</button>
       </div>
+      <p class="user-msg">Dogs</p>
     </article>
   </main>
 </body>
