--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -15,16 +15,18 @@ main.all-listings {
       align-items: center;
       text-align: center;
       box-shadow: 2px 2px 5px 1px #7994AF;
-      padding: 1em 0em 1em;
+      margin: 1em 0em 1em;
 
       img {
-        max-width: 150px;
+        width: 150px;
+        height: 100px;
         border: 2px solid white;
         box-shadow: 2px 2px 2px 1px #7994AF;
       }
 
       a {
         padding: 0em 0.5em;
+        margin-top: 0.5em;
       }
     }
   }
