add conditional rendering for main products page favourites toggle

--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -96,6 +96,10 @@ main.all-listings {
     color: #41ac6c !important;
   }
 
+  .hide {
+    display: none;
+  }
+
   @media (min-width: 1000px) {
 
     // All listings
