--- a/views/products_index.ejs
+++ b/views/products_index.ejs
@@ -16,11 +16,19 @@
       </article>
       <% } %>
     </section>
+    <% if (typeof user_id !=='undefined' ) { %>
   <div class="sorting-buttons">
     <div class="form-check form-switch">
       <input class="form-check-input" type="checkbox" id="favouritesOnly">
       <label class="form-check-label" for="favouritesOnly">Favourites</label>
     </div>
+      <% } else { %>
+  <div class="sorting-buttons" style="justify-content: right;">
+    <div class="form-check form-switch hide">
+      <input class="form-check-input hide" type="checkbox" id="favouritesOnly">
+      <label class="form-check-label hide" for="favouritesOnly">Favourites</label>
+    </div>
+        <% } %>
     <select id="sortBy" class="form-select" aria-label="Sorting filter">
       <option value="recent" selected>Most recent</option>
       <option value="priceLow">Price: low to high</option>
