implement my favourite btn; add disabled-btn css

--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -59,4 +59,11 @@ main.unique-listing-info {
   .green {
     color: green;
   }
+  .disabled-btn {
+    background-color: gray;
+    pointer-events: none;
+    cursor: not-allowed;
+    opacity: 0.65;
+    filter: alpha(opacity=65);
+  }
 }
