--- a/views/products_unique.ejs
+++ b/views/products_unique.ejs
@@ -18,7 +18,7 @@
         <button id="addFavourite" value="<%= `${product.id}` %>">Add As Favourite</button>
         <button>Contact Seller</button>
       </div>
-      <p class="user-msg">Dogs</p>
+      <p class="user-msg"></p>
     </article>
   </main>
 </body>
