update layout styling

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,12 @@
 main {
-  margin: 1em;
+  margin: 1em auto 1em;
+}
+
+.price {
+  font-weight: bold;
+  color: #41ac6c;
+}
+
+.hide {
+  display: none;
 }
