--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -4,11 +4,10 @@ main.unique-listing-info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 75%;
-    max-width: 600px;
+    width: 90%;
     margin: auto;
     box-shadow: 2px 2px 5px 1px #7994AF;
-    font-size: 0.75em;
+    font-size: 0.85em;
 
     div.unique-primary-info {
       width: 100%;
@@ -28,7 +27,7 @@ main.unique-listing-info {
         background-color: rgba($color: #7994af, $alpha: 0.2);
       }
 
-      a {
+      span {
         padding: 0px 5px;
         font-weight: bold;
       }
@@ -55,9 +54,11 @@ main.unique-listing-info {
     }
   }
 
-  @media (min-width: 600px) {
+  @media (min-width: 500px) {
     article.unique-listing-details {
       font-size: 1rem;
+      width: 75%;
+      max-width: 600px;
     }
   }
 }
