--- a/views/products_unique.ejs
+++ b/views/products_unique.ejs
@@ -8,11 +8,11 @@
       <div class="unique-primary-info">
       <img src="<%= `${product.img_url}` %>">
       <div>
-        <a><%= product.title %></a>
-        <a class="price">$<%= product.price %></a>
+        <span><%= product.title %></span>
+        <span class="price">$<%= product.price %></span>
       </div>
-    </div>
       <p><%= product.description %></p>
+    </div>
       <div class="unique-listing-buttons">
         <button>Mark As Sold</button>
         <button>Add As Favourite</button>
