--- a/views/products_unique.ejs
+++ b/views/products_unique.ejs
@@ -24,6 +24,23 @@
       </div>
       <p class="user-msg"></p>
     </article>
+    <form id="msgBreeder" action="/message" method="post">
+      <ul>
+       <li>
+         <label for="name">Name:</label>
+         <input type="text" id="name" name="user_name">
+       </li>
+       <li>
+         <label for="mail">E-mail:</label>
+         <input type="email" id="mail" name="user_email">
+       </li>
+       <li>
+         <label for="msg">Message:</label>
+         <textarea id="msg" name="user_message"></textarea>
+       </li>
+      </ul>
+      <button>Submit</button>
+     </form>
   </main>
 </body>
 
