implement messaging feature with ajax post

--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -75,6 +75,7 @@ main.unique-listing-info {
 
   form {
     /* Center the form on the page */
+    display: none;
     margin: 0 auto;
     margin-top: 1em;
     width: 400px;
