--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -55,8 +55,10 @@ main.unique-listing-info {
   }
   .user-msg {
     font-size: 2em;
-    align-self: flex-start;
+    align-self: center;
     display: none;
+    margin-top: 1em;
+    margin-bottom: -1em;
   }
 
   .red {
@@ -78,36 +80,35 @@ main.unique-listing-info {
     display: none;
     margin: 0 auto;
     margin-top: 1em;
-    width: 400px;
+    width: 75%;
+    max-width: 400px;
+    min-width: 200px;
     /* Form outline */
-    padding: 1em;
     border: 1px solid #ccc;
     border-radius: 1em;
+
     ul {
       list-style: none;
+      margin: 1em auto 1em;
       padding: 0;
-      margin: 0;
+      width: 90%;
+      font-size: 0.85rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
-    form li + li {
-      margin-top: 1em;
-    }
-
-    label {
-      /* Uniform size & alignment */
-      display: inline-block;
-      width: 90px;
+    li {
+      display: flex;
+      flex-direction: column;
+      max-width: 300px;
+      width: 100%;
+      padding-top: 0.5em;
     }
 
     input,
     textarea {
-      /* To make sure that all text fields have the same font settings
-         By default, textareas have a monospace font */
-      font: 1em sans-serif;
-
-      /* Uniform text field size */
-      width: 300px;
-      box-sizing: border-box;
 
       /* Match form field borders */
       border: 1px solid #999;
@@ -120,22 +121,11 @@ main.unique-listing-info {
     }
 
     textarea {
-      /* Align multiline text fields with their labels */
-      vertical-align: top;
-
       /* Provide space to type some text */
       height: 5em;
     }
 
-    .button {
-      /* Align buttons with the text fields */
-      padding-left: 90px; /* same size as the label elements */
-    }
-
     button {
-      /* This extra margin represent roughly the same space as the space
-         between the labels and their text fields */
-      margin-top: 0.5em;
       background-color: rgba($color: #7994af, $alpha: 0.3);
       border-radius: 5px;
     }
@@ -146,6 +136,10 @@ main.unique-listing-info {
       font-size: 1rem;
       width: 75%;
       max-width: 600px;
+    }
+
+    form ul {
+      font-size: 1rem;
     }
   }
 }
