--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -128,6 +128,7 @@ main.unique-listing-info {
     button {
       background-color: rgba($color: #7994af, $alpha: 0.3);
       border-radius: 5px;
+      margin-bottom: 0.5em;
     }
   }
 
