--- a/views/products_unique.ejs
+++ b/views/products_unique.ejs
@@ -15,12 +15,15 @@
     </div>
       <div class="unique-listing-buttons">
         <% if (typeof user_id !=='undefined' && user_id.admin === true) { %>
-          <button id="markSold" value="<%= `${product.id}` %>" class="<%= product.sold ? 'disabled-btn' : '' %>"><%= product.sold ? "Sold" : "Mark As Sold" %></button>
-        <% } %>
-        <% if (typeof user_id !=='undefined') { %>
           <button id="addFavourite" value="<%= `${product.id}` %>" class="<%= isFavourite ? 'disabled-btn' : '' %>"><%= isFavourite ? "Favourite" : "Add As Favourite" %></button>
-        <% } %>
+          <button id="markSold" value="<%= `${product.id}` %>" class="<%= product.sold ? 'disabled-btn' : '' %>"><%= product.sold ? "Sold" : "Mark As Sold" %></button>
+          <button id="deleteListing" value="<%= `${product.id}` %>">Delete Listing</button>
+          <% } else if (typeof user_id !=='undefined') { %>
+          <button id="addFavourite" value="<%= `${product.id}` %>" class="<%= isFavourite ? 'disabled-btn' : '' %>"><%= isFavourite ? "Favourite" : "Add As Favourite" %></button>
           <button id="msgBreeder">Contact Breeder</button>
+          <% } else { %>
+          <button id="msgBreeder">Contact Breeder</button>
+          <% }%>
       </div>
       <p class="user-msg"></p>
     </article>
